# portfolio

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  portfolio.db  pyproject.toml  requirements.txt
app/: .vscode  config.py  constants.py  db.py  exceptions.py  logging_config.py  models.py
app/agents/: weekly_graph.py
app/agents/prompts/: weekly_template.md
app/repositories/: holdings.py  prices.py
app/server/: api.py  cli.py
app/server/static/: styles.css
app/server/templates/: report.html.j2
app/services/: correlation.py  earnings.py  email_notify.py  ingestion.py  llm_summarize.py  market_brief.py  metrics.py  news.py  openai_summary.py  outlook_yf.py  positions.py  rate_limit.py  reporting.py  risk_free.py  sectors.py  technicals.py  validation.py  volatility.py
app/services/news_providers/: __init__.py  alpha_vantage.py  base_news.py
app/services/providers/: base.py  mock_provider.py  tiingo.py  yf.py
app/utils/: rate_limit.py
data/: holdings_sample.csv
reports/2025-10-24/: weekly.html
reports/2025-10-25/: weekly.html
scripts/: check_drawdown.py  check_macd.py  com.portfolio.daily-refresh.plist  com.portfolio.market-brief-afternoon.plist  com.portfolio.market-brief-midday.plist  daily_refresh.sh  debug_risk_metrics.py  full_refresh.sh  market_brief.sh  setup_market_brief_scheduler.sh  setup_scheduler.sh  verify_calculations.py
templates/: daily.html  weekly.html  weekly.html.bak
tests/: __init__.py  conftest.py  test_calculations.py
